syntax = "proto3";

import "merchant.proto";


// 用户读取优惠券列表
message ConsumerRetrieveVoucherRequest {
    string numbers = 1;     // 管理员
    string identity = 2;
    string merchant_identity = 3;    // 商家ID
};

message ConsumerRetrieveVoucherResponse {
    repeated MerchantVoucher merchant_voucher = 1;
};

// 商家读取优惠券列表
message MerchantRetrieveVoucherRequest {
    string numbers = 1;     // 管理员
    string identity = 2;

    string merchant_identity = 3;    // 商家ID
}

message MerchantRetrieveVoucherResponse {
    repeated VoucherMaterial vouchers = 1;
}

// 管理员确认用户优惠券
message ConfirmVoucherRequest {
    string numbers = 1;             // 管理员账号
    string identity = 2;            // 管理员ID

    string voucher_identity = 3;    // 优惠券ID
    string c_numbers = 4;           // 用户账号
    string c_identity = 5;          // 用户ID
    string merchant_identity = 6;   // 商家ID
    string activity_identity = 7;   // 活动ID

    uint32 exec_confirm = 8;        // 是否确认使用，1-确认使用，0-检查优惠券是否有效
}

message ConfirmVoucherResponse {
    string state = 1;               // "invalid"-无效，"used"-已经使用，"valid"-可使用，"yes"-使用成功
}

message MerchantVoucher {
    MerchantMaterial merchant = 1;
    repeated VoucherMaterial vouchers = 2;
}

message VoucherMaterial {
    string activity_identity = 1;   // 对应活动ID
    string create_time = 2;     // 生成时间
    string expire_time = 3;     // 过期时间
    uint32 used = 4;            // 已使用
    string activity_title = 5;  // 活动标题
    string merchant_identity = 6;
    string numbers = 7;

    string identity = 8;    // 优惠券ID
}
